--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*@dev",
+		"laravel/framework": "5.0.*",
 		"league/fractal": "0.11.*"
 	},
 	"require-dev": {
