--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"league/fractal": "0.11.*",
-		"ircmaxell/random-lib": "~1.1"
+		"ircmaxell/random-lib": "~1.1",
+		"guzzlehttp/guzzle": "~4.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
